--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
+# Java / Gradle
+/build/
+/out/
+/.gradle/
+/.idea/
+venv/
+*.class
+*.log
+
+# Node.js（もしあれば）
+/node_modules/
+
+# OS関連
+.DS_Store
+Thumbs.db
+
+2024ishikawa.xml
 .env
-/vscode
+noto.json
+Jma_tsunamiBOT.py
